manifests/media-entertainment/base/jellyfin.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: jellyfin
  labels:
    app: jellyfin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jellyfin
  template:
    metadata:
      labels:
        app: jellyfin
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: kubernetes.io/hostname
                operator: In
                values:
                - gpu-node-1
      securityContext:
        runAsUser: 1031
        runAsGroup: 100
        fsGroup: 100
      containers:
        - name: jellyfin
          image: "docker.io/jellyfin/jellyfin:10"
          # securityContext:
          #   privileged: true
          ports:
            - name: http
              containerPort: 8096
              protocol: TCP
            - name: https
              containerPort: 8920
              protocol: TCP
            - name: svc-discovery
              containerPort: 1900
              protocol: UDP
            - name: cl-discovery
              containerPort: 7359
              protocol: UDP
          volumeMounts:
            - name: media
              mountPath: /media
            - name: music
              mountPath: /music/organized
              subPath: organized
            - name: config
              mountPath: /config
            - name: cache
              mountPath: /cache
            - name: nvidia-libraries
              mountPath: /usr/lib/x86_64-linux-gnu/libcuda.so.1
              subPath: libcuda.so.1
            - name: nvidia-libraries
              mountPath: /usr/lib/x86_64-linux-gnu/libnvidia-ml.so.1
              subPath: libnvidia-ml.so.1
          resources:
            requests:
              memory: "1Gi"
              cpu: "500m"
            limits:
              memory: "5Gi"
              cpu: "3000m"
      restartPolicy: Always
      volumes:
        - name: media
          persistentVolumeClaim:
            claimName: pvc-nfs-jellyfin-media
        - name: music
          persistentVolumeClaim:
            claimName: pvc-nfs-jellyfin-music
        - name: config
          persistentVolumeClaim:
            claimName: pvc-iscsi-jellyfin-config
        - name: cache
          persistentVolumeClaim:
            claimName: pvc-iscsi-jellyfin-cache
        - name: nvidia-libraries
          hostPath:
            path: /usr/lib/x86_64-linux-gnu
            type: Directory

---
kind: Service
apiVersion: v1
metadata:
  name: jellyfin-service
  labels:
    app: jellyfin
spec:
  type: LoadBalancer
  loadBalancerIP: 192.168.18.241
  externalTrafficPolicy: Local
  selector:
    app: jellyfin
  sessionAffinity: None
  ports:
    - name: http
      protocol: TCP
      port: 8096
      targetPort: http
    - name: https
      protocol: TCP
      port: 8920
      targetPort: https
    - name: svc-discovery
      protocol: UDP
      port: 1900
      targetPort: svc-discovery
    - name: cl-discovery
      protocol: UDP
      port: 7359
      targetPort: cl-discovery

---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: jellyfin
  labels:
    app: jellyfin
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/proxy-body-size: "128m"
spec:
  tls:
  - hosts:
    - jellyfin.j3laserna.me
    secretName: wildcard-j3laserna-me-tls
  rules:
    - host: jellyfin.j3laserna.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jellyfin-service
                port:
                  name: http
